# simple-robotics-pipeline

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/my_robotics_library/backend/: chasing_planner.h  obstacle_manager.h  target_predictor.h  types.h
include/my_robotics_library/backend/planners/: chasing_planner.h  height_planner.h
include/my_robotics_library/frontend/: wrapper.h
src/backend/: chasing_planner.cc  height_planner.cc
src/frontend/: wrapper.cc
src/my_robotics_pipeline/frontend/: wrapper.cc
test/: pipeline_test.cc
